# audio-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  start.ps1
.github/workflows/: ci.yml
include/: AudioProcessor.h  Benchmark.h  Effects.h  FeatureExtractor.h  MLModels.h  MLWeights.h  SimdOps.h
src/: AudioProcessor.cpp  Benchmark.cpp  Effects.cpp  FeatureExtractor.cpp  MLModels.cpp  SimdOps.cpp  main.cpp
tools/: extract_data_robust.py  extract_features_real.py  requirements.txt  train_compressor_gate_fma.py  train_models.py  verify_cpp.cpp  verify_inference.py  verify_model.py
tools/extracted_features/: cpp_inference_output.json  ml_scalers.json
ui/: package.json  server.js
ui/public/: index.html  script.js  style.css
vst/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
